<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/create"
        android:layout_width="156dp"
        android:layout_height="41dp"
        android:layout_marginBottom="320dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/create_session"
        android:fontFamily="casual"
        android:onClick="create"
        android:outlineAmbientShadowColor="?attr/actionModeSplitBackground"
        android:outlineSpotShadowColor="?attr/colorControlActivated"
        android:requiresFadingEdge="horizontal|vertical"
        android:shadowColor="?android:attr/actionMenuTextColor"
        android:text="@string/create_a_session"
        android:textColor="@android:color/background_light"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/join_session"
        android:layout_width="156dp"
        android:layout_height="40dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/join_session"
        android:onClick="wait_page"
        android:text="@string/join_a_session"
        android:fontFamily="casual"
        android:textColor="@android:color/background_light"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create" />

    <EditText
        android:id="@+id/textEditCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/code"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/join_session" />

    <ImageView
        android:id="@+id/qr_scanner"
        android:layout_width="33dp"
        android:layout_height="29dp"
        android:layout_marginEnd="8dp"

        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toStartOf="@+id/join_session"
        app:layout_constraintStart_toStartOf="@+id/textEditCode"
        app:layout_constraintTop_toBottomOf="@+id/textEditCode"
        app:srcCompat="@drawable/images" />


</android.support.constraint.ConstraintLayout>